<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewName"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:hint="@string/hintname" />

    <TextView
        android:id="@+id/textView_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewAge"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="20dp"
        android:hint="@string/hintage" />

    <TextView
        android:id="@+id/textView_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewSex"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/RadioGroup_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_sex1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonSex1" />

        <RadioButton
            android:id="@+id/radioButton_sex2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonSex2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewJob"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/RadioGroup_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_job1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonJob1" />

        <RadioButton
            android:id="@+id/radioButton_job2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadioButtonJob2" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ButtonName"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Buttonage"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ButtonAll"
            android:onClick="onClick"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewInformation"
        android:textSize="18dp" />
</LinearLayout>